<resources>
    <string name="app_name">ШИФТ Пицца</string>
    <string name="title_mainpage">Пицца</string>
    <string name="pizza_price">от %1$d ₽</string>

    <string name="pizza_size_s">Маленькая</string>
    <string name="pizza_size_m">Средняя</string>
    <string name="pizza_size_l">Большая</string>

    <string name="add_to_cart">В корзину за %1$d ₽</string>

    <string name="topping_cost">%1$d ₽</string>

    <string name="nutrition">Пищевая ценность на 100г</string>

    <string name="calories">Калории</string>
    <string name="protein">Белки</string>
    <string name="total_fat">Жиры</string>
    <string name="carbohydrates">Углеводы</string>
    <string name="sodium">Натрий</string>

    <string name="allergens">Может содержать аллергены: </string>

    <string name="kcal">"""  ккал"""</string>
    <string name="grams">"""  г"""</string>
    <string name="milligrams">"""  мг"""</string>

</resources>