<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginStart="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <FrameLayout
            android:id="@+id/arrow_icon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="12dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_cancel"
                android:layout_gravity="center"/>

        </FrameLayout>

        <TextView
            android:id="@+id/pizza_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Пепперони"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:fontFamily="@font/inter_bold"
            android:layout_marginStart="24dp"/>

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/top_layout"
        app:layout_constraintBottom_toTopOf="@id/button_to_cart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/pizza_img"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center"
                tools:src="@drawable/pizza"
                android:layout_marginTop="24dp"/>

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/switcher_background"
                android:layout_margin="16dp">

                <RadioButton
                    android:id="@+id/small"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/switcher_selector"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/pizza_size_s"
                    android:fontFamily="@font/inter_medium"/>

                <RadioButton
                    android:id="@+id/medium"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/switcher_selector"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/pizza_size_m"
                    android:fontFamily="@font/inter_medium"/>

                <RadioButton
                    android:id="@+id/large"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/switcher_selector"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/pizza_size_l"
                    android:fontFamily="@font/inter_medium"/>

            </RadioGroup>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:cardElevation="0dp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:background="@color/fond">

                    <TextView
                        android:id="@+id/pizza_ingredient"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        tools:text="Пикантная пепперони, сливочная моцарелла, фирменный томатный соус"
                        android:textColor="@color/info"
                        android:textSize="14sp"
                        android:fontFamily="@font/inter_medium"
                        android:layout_margin="8dp"/>

                    <ImageView
                        android:id="@+id/info_icon"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:src="@drawable/ic_info"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/toppings_set"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="3"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_to_cart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/add_to_cart"
        android:background="@drawable/button_background"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:fontFamily="@font/inter_bold"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>